[tool.poetry]
name = "agentrouter"
version = "0.1.0"
description = ""
authors = ["Agent Router"]
readme = "README.md"
packages = [
    {include = "agentrouter"},
]

[tool.poetry.dependencies]
python = "^3.12"
litellm = {extras = ["proxy"], version = "^1.58.1"}
langfuse = "^2.57.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
