[tool.poetry]
name = "agentrouter"
version = "0.1.0"
description = ""
authors = ["motin@motin.eu"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "agentrouter"},
]

[tool.poetry.dependencies]
python = "^3.12"
litellm = {version = "^1.59.8", extras = ["proxy"]}
langfuse = "^2.57.7"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.32.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe]
envfile = ".env"

[tool.poe.tasks]
start = "litellm --config config.yaml"
